--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -62,6 +62,7 @@ jobs:
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: clo835-project-ecr
+        BD_PASSWORD: ${{ secrets.DB_PASSWORD }}
         #IMAGE_TAG: v0.2
       run: |
         # Generate IMAGE_TAG using current date and time
@@ -78,7 +79,7 @@ jobs:
         export DBPORT=3306
         export DBUSER=root
         export DATABASE=employees
-        export DBPWD=pw
+        export DBPWD=$BD_PASSWORD
         export APP_COLOR=blue
         docker run -p 8080:8080  -e DBHOST=$DBHOST -e DBPORT=$DBPORT -e  DBUSER=$DBUSER -e DBPWD=$DBPWD -e DATABASE=$DATABASE -d $ECR_REGISTRY/$ECR_REPOSITORY:"${IMAGE_TAG}"
         docker ps
