--- a/Kubernetes_manifests/webapp/app_configmap.yaml
+++ b/Kubernetes_manifests/webapp/app_configmap.yaml
@@ -5,4 +5,6 @@ metadata:
 data:
   background_image_url: "https://github.com/111559225-myseneca/CAA900-Azure-Project/blob/main/Checkpoint2/images/parta_log_snapshot.png"
   group_name: "Group7"
-  slogan: "Group7 - Empowering Excellence Together"
+  slogan: "Empowering Excellence Together"
+  bucket_name: <s3 bucket name>
+  file_name: <backgound image file name>
