--- a/Kubernetes_manifests/webapp/app_deployment.yaml
+++ b/Kubernetes_manifests/webapp/app_deployment.yaml
@@ -40,6 +40,11 @@ spec:
             configMapKeyRef:
               name: app-config
               key: file_name
+        - name: IMAGE_PATH
+          valueFrom:
+            configMapKeyRef:
+              name: app-config
+              key: image_path
         - name: DBHOST
           value: "mysql-service"
         - name: DBPORT
