--- a/Kubernetes_manifests/webapp/app_configmap.yaml
+++ b/Kubernetes_manifests/webapp/app_configmap.yaml
@@ -6,5 +6,5 @@ data:
   group_name: "Group7"
   slogan: "Empowering Excellence Together"
   bucket_name: "appbackgroundimage"
-  file_name: "background.jpg"
-  image_path: "static/image/background.jpg"
+  image_name: "background.jpg"
+  image_path: "static/background.jpg"
