Fixes github actions - attempt 2

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -52,11 +52,11 @@ jobs:
         # Docker build for mysql server
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:"${IMAGE_TAG}" -f Dockerfile_mysql .
         # Unit test
-        docker run -d --name mysql -e MYSQL_ROOT_PASSWORD=$BD_PASSWORD -d $ECR_REGISTRY/$ECR_REPOSITORY:"${IMAGE_TAG}"
+        docker run -d --name mysql -e MYSQL_ROOT_PASSWORD="${BD_PASSWORD}" -d $ECR_REGISTRY/$ECR_REPOSITORY:"${IMAGE_TAG}"
         docker ps
         echo "Pause for 10 seconds to let container start"
         sleep 10
-        docker exec mysql mysql -p$BD_PASSWORD -e "show databases;"
+        docker exec mysql mysql -p"${BD_PASSWORD}" -e "show databases;"
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:"${IMAGE_TAG}"
         
     - name: Build, test, tag, and push WebAPP image to Amazon ECR
