--- a/Kubernetes_manifests/webapp/app_configmap.yaml
+++ b/Kubernetes_manifests/webapp/app_configmap.yaml
@@ -5,6 +5,6 @@ metadata:
 data:
   group_name: "Group7"
   slogan: "Empowering Excellence Together"
-  bucket_name: "clo835-project-zhiweizeng"
-  image_name: "background.jpg"
-  image_path: "static/background.jpg"
+  bucket_name: "appbackgroundimage"
+  image_path: ""
+  image_path: "static/background2.jpg"
