--- a/Kubernetes_manifests/webapp/app_configmap.yaml
+++ b/Kubernetes_manifests/webapp/app_configmap.yaml
@@ -6,5 +6,4 @@ data:
   group_name: "Group7"
   slogan: "Empowering Excellence Together"
   bucket_name: "appbackgroundimage"
-  image_path: ""
-  image_path: "static/background2.jpg"
+  image_path: "static/background.jpg"
