fix bug: missing data

--- a/Kubernetes_manifests/webapp/app_configmap.yaml
+++ b/Kubernetes_manifests/webapp/app_configmap.yaml
@@ -7,3 +7,4 @@ data:
   slogan: "Empowering Excellence Together"
   bucket_name: "appbackgroundimage"
   image_path: "static/background.jpg"
+  image_name: "background.jpg"
